--- a/template.yaml
+++ b/template.yaml
@@ -11,61 +11,21 @@ Parameters:
   LogLevel:
     Type: String
     Default: INFO
+  UserPoolId:
+    Type: String
+    Default: us-east-1_m9KnTEHHl
+  UserPoolClientId:
+    Type: String
+    Default: "2evg82jv37qsjqsqe11ie187ij"
 
 Resources:
-  AuthorizerRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          -
-            Effect: "Allow"
-            Principal:
-              Service:
-                - "lambda.amazonaws.com"
-                - "apigateway.amazonaws.com"
-            Action:
-              - "sts:AssumeRole"
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-      Policies:
-        -
-          PolicyName: lambda-invoke
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action: "lambda:InvokeFunction"
-                Resource: "*"
-      RoleName: apigateway-authorizer-role
-
   ServerlessRestApi:
     Type: AWS::Serverless::Api
-    DependsOn: AuthorizerRole
     Properties:
       Name: event-assistant-api
       Description: "This is a test api"
       StageName: dev
       DefinitionUri: swagger.yaml
-
-  AuthorizerFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      FunctionName: jwt-authorizer
-      CodeUri: auth/
-      Handler: authorizer.handler
-      Runtime: nodejs20.x
-      Timeout: 3
-      Environment:
-        Variables:
-          logLevel: !Ref LogLevel
-      MemorySize: 128
-      Policies:
-        - AmazonAPIGatewayInvokeFullAccess
-      Layers:
-        - !Ref CommonLibsLayer
-        - !Ref CommonsLayer
 
   CommonLibsLayer:
     Type: AWS::Serverless::LayerVersion
@@ -96,30 +56,20 @@ Resources:
       AttributeDefinitions:
         - AttributeName: eventId
           AttributeType: S
-        - AttributeName: eventName
-          AttributeType: S
-        - AttributeName: eventDescription
-          AttributeType: S
-        - AttributeName: eventDate
-          AttributeType: S
-        - AttributeName: location
-          AttributeType: S
-        - AttributeName: createdAt
-          AttributeType: S
-        - AttributeName: updatedAt
-          AttributeType: S
-        - AttributeName: registrationUrl
-          AttributeType: S
-        - AttributeName: agenda
-          AttributeType: L
-        - AttributeName: speakersInfo
-          AttributeType: L
-        - AttributeName: contactEmail
-          AttributeType: S
-        - AttributeName: sessionIds
-          AttributeType: L
       KeySchema:
         - AttributeName: eventId
+          KeyType: HASH
+      BillingMode: PAY_PER_REQUEST
+
+  SpeakersTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: speakers
+      AttributeDefinitions:
+        - AttributeName: speakerId
+          AttributeType: S
+      KeySchema:
+        - AttributeName: speakerId
           KeyType: HASH
       BillingMode: PAY_PER_REQUEST
 
@@ -130,19 +80,13 @@ Resources:
       AttributeDefinitions:
         - AttributeName: sessionId
           AttributeType: S
-        - AttributeName: sessionName
-          AttributeType: S
-        - AttributeName: sessionDescription
-          AttributeType: S
-        - AttributeName: sessionDate
-          AttributeType: S
-        - AttributeName: sessionTime
-          AttributeType: S
-        - AttributeName: sessionLocation
+        - AttributeName: eventId
           AttributeType: S
       KeySchema:
         - AttributeName: sessionId
           KeyType: HASH
+        - AttributeName: eventId
+          KeyType: RANGE
       BillingMode: PAY_PER_REQUEST
 
   AttendeesTable:
@@ -156,20 +100,6 @@ Resources:
           AttributeType: S
         - AttributeName: email
           AttributeType: S
-        - AttributeName: name
-          AttributeType: S
-        - AttributeName: phoneNumber
-          AttributeType: S
-        - AttributeName: credentials
-          AttributeType: M
-        - AttributeName: preferences
-          AttributeType: M
-        - AttributeName: registrationDate
-          AttributeType: S
-        - AttributeName: selectedSessions
-          AttributeType: L
-        - AttributeName: communicationOptIn
-          AttributeType: BOOL
       KeySchema:
         - AttributeName: attendeeId
           KeyType: HASH
@@ -178,6 +108,51 @@ Resources:
           KeySchema:
             - AttributeName: email
               KeyType: HASH
+            - AttributeName: eventId
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
+        - IndexName: eventId-index
+          KeySchema:
+            - AttributeName: eventId
+              KeyType: HASH
+            - AttributeName: attendeeId
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
+      BillingMode: PAY_PER_REQUEST
+
+  SessionRegistrationsTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: session_registrations
+      AttributeDefinitions:
+        - AttributeName: sessionId
+          AttributeType: S
+        - AttributeName: eventId
+          AttributeType: S
+        - AttributeName: attendeeId
+          AttributeType: S
+      KeySchema:
+        - AttributeName: sessionId
+          KeyType: HASH
+        - AttributeName: attendeeId
+          KeyType: RANGE
+      GlobalSecondaryIndexes:
+        - IndexName: attendeeId-index
+          KeySchema:
+            - AttributeName: attendeeId
+              KeyType: HASH
+            - AttributeName: sessionId
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
+        - IndexName: eventId-index
+          KeySchema:
+            - AttributeName: eventId
+              KeyType: HASH
+            - AttributeName: sessionId
+              KeyType: RANGE
           Projection:
             ProjectionType: ALL
       BillingMode: PAY_PER_REQUEST
@@ -197,14 +172,12 @@ Resources:
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref AttendeesTable
-        - PolicyName: SecretsManagerGetSecretValue
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action: secretsmanager:GetSecretValue
-                Resource:
-                  - !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:PASSWORD_SECRET*
+        - Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+              - cognito-idp:InitiateAuth
+            Resource: !Sub arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/${UserPoolId} 
       Layers:
         - !Ref CommonLibsLayer
         - !Ref CommonsLayer
@@ -227,16 +200,19 @@ Resources:
         Variables:
           ATTENDEES_TABLE: !Ref AttendeesTable
           logLevel: !Ref LogLevel
+          USER_POOL_ID: !Ref UserPoolId
+          USER_POOL_CLIENT_ID: !Ref UserPoolClientId
       MemorySize: 128
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref AttendeesTable
         - Version: '2012-10-17'
           Statement:
-            - Effect: Allow
-              Action: secretsmanager:GetSecretValue
-              Resource:
-                - !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:PASSWORD_SECRET*
+          - Effect: Allow
+            Action:
+              - cognito-idp:SignUp
+              - cognito-idp:InitiateAuth
+            Resource: !Sub arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/${UserPoolId} 
         - AmazonSESFullAccess
       Layers:
         - !Ref CommonLibsLayer
@@ -249,6 +225,59 @@ Resources:
             Method: post
             RestApiId: !Ref ServerlessRestApi
 
+  BookSessionFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: book-session
+      CodeUri: sessions/
+      Handler: index.bookSession
+      Runtime: nodejs20.x
+      Environment:
+        Variables:
+          SESSION_REGISTRATIONS_TABLE: !Ref SessionRegistrationsTable
+          SESSIONS_TABLE: !Ref SessionsTable
+          logLevel: !Ref LogLevel
+      MemorySize: 128
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref SessionRegistrationsTable
+      Layers:
+        - !Ref CommonLibsLayer
+        - !Ref CommonsLayer
+      Events:
+        BookSession:
+          Type: Api
+          Properties:
+            Path: /sessions/{sessionId}/book
+            Method: post
+            RestApiId: !Ref ServerlessRestApi
+        
+  CancelSessionFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: cancel-session
+      CodeUri: sessions/
+      Handler: index.cancelSession
+      Runtime: nodejs20.x
+      Environment:
+        Variables:
+          SESSION_REGISTRATIONS_TABLE: !Ref SessionRegistrationsTable
+          SESSIONS_TABLE: !Ref SessionsTable
+          logLevel: !Ref LogLevel
+      MemorySize: 128
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref SessionRegistrationsTable
+      Layers:
+        - !Ref CommonLibsLayer
+        - !Ref CommonsLayer
+      Events:
+        CancelSession:
+          Type: Api
+          Properties:
+            Path: /sessions/{sessionId}/cancel
+            Method: delete
+            RestApiId: !Ref ServerlessRestApi
 
 Outputs:
   AttendeesTableArn:
@@ -260,9 +289,6 @@ Outputs:
   SessionsTableArn:
     Description: "Sessions Table ARN"
     Value: !GetAtt SessionsTable.Arn
-  AuthorizerRoleArn:
-    Description: "Authorizer Role ARN"
-    Value: !GetAtt AuthorizerRole.Arn
 
 
 
