--- a/template.yaml
+++ b/template.yaml
@@ -558,8 +558,7 @@ Resources:
                   - !GetAtt GetEventDetailsFunction.Arn
                   - !GetAtt GetSessionDetailsFunction.Arn
                   - !GetAtt GetCurrentAttendeeFunction.Arn
-                  - !Ref CommonLibsLayer
-                  - !Ref CommonsLayer
+                  - "arn:aws:lambda:us-east-1:597088052511:layer:*"
               - Effect: Allow
                 Action:
                   - secretsmanager:GetSecretValue
